--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -1,5 +1,46 @@
-.navBar {
-    height: 100px;
+.navBar{
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    background-color: dodgerblue;
+    position: absolute;
+    top: 0;
+    align-items: center;
+    justify-content: center;
+    background-color: mediumpurple;
+}
+
+.navBar .navHeader{
+    font-size: 40px;
+    color: white;
+    font-weight: bold;
+    margin: 5px 0;
+    font-family: Courier, monospace;
+}
+
+.navBar .navPart{
+    width: 95%;
+    border: white 1px solid;
+}
+
+.navBar .menu{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 0.5%;
+}
+
+.navBar .menu .options{
+    font-size: larger;
+    color: white;
+    padding: 0.25%;
+    margin-left: 1%;
+    margin-right: 1%;
+}
+
+.navBar .menu .options:hover{
+    font-weight: bold;
+    border-bottom: white 2px solid;
 }
