--- a/styles/global.css
+++ b/styles/global.css
@@ -1,24 +1,25 @@
-html,
-body {
+html, body {
     background: #ffffff;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     scroll-behavior: smooth;
-    margin-top: 1vw;
 }
 
 body::-webkit-scrollbar {
     width: 0.5vw;
     height: 0.5vw
 }
+
 body::-webkit-scrollbar-track {
     box-shadow: inset 0 0 0.5vw;
     background-color: #060c21;
 }
+
 body::-webkit-scrollbar-thumb {
     background: dodgerblue;
     border-radius: 0.5vw;
 }
+
 body::-webkit-scrollbar-thumb:hover {
     background: orangered;
 }
