--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    position: absolute;
+    position: sticky;
     top: 0;
     align-items: center;
     justify-content: center;
@@ -29,6 +29,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+    height: 50px;
     padding: 0.5%;
 }
 
