--- a/components/navbar/navbar.module.css
+++ b/components/navbar/navbar.module.css
@@ -29,12 +29,12 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: 50px;
+    height: 3vw;
     padding: 0.5%;
 }
 
 .navBar .menu .options{
-    font-size: 1.5vw;
+    font-size: 1.3vw;
     color: white;
     padding: 0.25%;
     margin-left: 1%;
