--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -1,6 +1,6 @@
 .footer{
     display: flex;
-    height: 80px;
+    height: 5vw;
     width: 100%;
     align-items: center;
     justify-content: center;
