--- a/styles/sorting.module.css
+++ b/styles/sorting.module.css
@@ -20,3 +20,31 @@
     grid-gap: 1vw;
     background-color: dodgerblue;
 }
+
+.array_container {
+    width: 49%;
+    height: 34.5vw;
+    background-color: white;
+    margin: 1% 0.5% 0.5% 0.5%;
+    padding: 0.5% 0;
+    border:none;
+    /*border-bottom-left-radius: 1.25vw;*/
+}
+.array_container_al {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    padding: 0.5% 0;
+    border:none;
+    background-color: black;
+    border-radius: 20px;
+    align-items: center;
+    /*border-bottom-left-radius: 1.25vw;*/
+}
+
+.array_bar {
+    width: 1%;
+    display: inline-block;
+    margin: 0.18% 0.18% 0.18% 0.18%;
+    background-color: dodgerblue;
+}
