--- a/styles/sorting.module.css
+++ b/styles/sorting.module.css
@@ -6,7 +6,7 @@
 }
 
 .visualizer canvas {
-    background-color: dodgerblue;
+    background-color: transparent;
     margin: 1vw;
     border-radius: 1vw;
 }
@@ -15,10 +15,19 @@
     display: grid;
     width: 90%;
     padding: 1vw;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto auto auto;
+    grid-template-rows: 2.5vw;
     border-radius: 0.5vw;
     grid-gap: 1vw;
     background-color: dodgerblue;
+}
+
+.visualizer .controller button {
+    font-size: 1.2vw;
+    border-radius: 10px;
+    border: none;
+    color: white;
+    background-color: mediumpurple;
 }
 
 .array_container {
